fix: correct the dependency service name

--- a/debian/moxa-ublox-config-utils.service
+++ b/debian/moxa-ublox-config-utils.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Initial Mode Configuration Tool for Ublox modules in MOXA platforms
-After=moxa-cellular-utils
+After=moxa-cellular-utils.service
 
 [Service]
 Type=forking
