fix: allow to configure different mode on specific module

--- a/moxa-ublox-config-utils.conf
+++ b/moxa-ublox-config-utils.conf
@@ -14,3 +14,12 @@ UBLOX_NETWORKING_MODE=2
 # Use this setting to control the maximum waiting time for the module 
 # performing the silent reset. Each count would take 3secs
 UBLOX_WAITCOUNT=20
+
+# By default, we use above configuation for all modules
+# For specific mode configuration on different module, See following example.
+#
+# For example, configure specific mode for MODEM-1
+# UBLOX_USB_ETH_MODE_1=2
+# UBLOX_NETWORKING_MODE_1=2
+#
+# Note, UBLOX_WAITCOUNT is not allowed to be overriden
