--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,39 +3,23 @@ variables:
 
 stages:
     - develop_build
-    - release_build
     - prepare_develop_debs
-    - prepare_release_debs
 
 develop_build:
     tags:
         - Runner-Stretch
     stage: develop_build
-    except:
-      refs:
-        - stretch
     script:
         - dpkg-buildpackage -us -uc -b
         - mv ../*.deb .
+        - mv ../*.buildinfo .
+        - mv ../*.changes .
     artifacts:
         name: "${CI_PROJECT_NAME}"
         paths:
         - ./*.deb
-
-release_build:
-    tags:
-        - Runner-Stretch
-    stage: release_build
-    only:
-      refs:
-        - stretch
-    script:
-        - dpkg-buildpackage -us -uc -b
-        - mv ../*.deb .
-    artifacts:
-        name: "${CI_PROJECT_NAME}"
-        paths:
-        - ./*.deb
+        - ./*.buildinfo
+        - ./*.changes
 
 prepare_develop_debs:
     tags:
@@ -43,7 +27,7 @@ prepare_develop_debs:
     stage: prepare_develop_debs
     only:
       refs:
-        - stretch-develop
+        - stretch/master
     dependencies:
         - develop_build
     when: manual
@@ -51,18 +35,3 @@ prepare_develop_debs:
         - mkdir -p /cache/stretch/develop/
         - cp *.deb /cache/stretch/develop/
         - ls /cache/stretch/develop/
-
-prepare_release_debs:
-    tags:
-        - Runner-Stretch
-    stage: prepare_release_debs
-    only:
-      refs:
-        - stretch
-    dependencies:
-        - release_build
-    when: manual
-    script:
-        - mkdir -p /cache/stretch/release/
-        - cp *.deb /cache/stretch/release/
-        - ls /cache/stretch/release/
