--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: moxa-ublox-config-utils
 Section: utils
 Priority: optional
 Maintainer: Fero JD Zhou <FeroJD.Zhou@moxa.com>
+            Remus TY Wu <RemusTY.Wu@moxa.com>
 Build-Depends: debhelper (>= 10)
 Standards-Version: 4.1.2
 Homepage: http://www.moxa.com/
