--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,13 +2,13 @@ variables:
     GIT_DEPTH: "1"
 
 stages:
-    - develop_build
-    - prepare_develop_debs
+    - mil-internal-release_build
+    - prepare_mil-internal-release_debs
 
-develop_build:
+mil-internal-release_build:
     tags:
         - Runner-Stretch
-    stage: develop_build
+    stage: mil-internal-release_build
     script:
         - dpkg-buildpackage -us -uc -b
         - mv ../*.deb .
@@ -21,17 +21,17 @@ develop_build:
         - ./*.buildinfo
         - ./*.changes
 
-prepare_develop_debs:
+prepare_mil-internal-release_debs:
     tags:
         - Runner-Stretch
-    stage: prepare_develop_debs
+    stage: prepare_mil-internal-release_debs
     only:
       refs:
         - stretch/master
     dependencies:
-        - develop_build
+        - mil-internal-release_build
     when: manual
     script:
-        - mkdir -p /cache/stretch/develop/
-        - cp *.deb /cache/stretch/develop/
-        - ls /cache/stretch/develop/
+        - mkdir -p /cache/stretch/mil-internal-release/
+        - cp *.deb /cache/stretch/mil-internal-release/
+        - ls /cache/stretch/mil-internal-release/
